feat: add audio module, edge functions and fixes

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,3 @@
-# ============================================================================
-# CONFIGURATION SUPABASE
-# ============================================================================
-# Copiez ce fichier en .env.local et remplissez les valeurs
-# Ces valeurs se trouvent dans: Supabase Dashboard > Settings > API
-# ============================================================================
-
-# URL de votre projet Supabase
-VITE_SUPABASE_URL=https://votre-projet.supabase.co
-
-# Clé publique (anon key) - Safe côté client
-VITE_SUPABASE_ANON_KEY=votre-anon-key-ici
-
-# ============================================================================
-# NE JAMAIS EXPOSER CÔTÉ CLIENT:
-# - Service Role Key (utilisée uniquement côté serveur)
-# - JWT Secret
-# ============================================================================
+VITE_SUPABASE_URL=your_supabase_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+VITE_UPLOAD_WEBHOOK_URL=https://your-n8n-instance.com/webhook/upload
